@@ -141,8 +141,8 @@
             <property name="text">
              <string/>
             </property>
-            <property name="textInteractionFlags">
-             <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+            <property name="focusPolicy">
+             <set>Qt::StrongFocus</set>
             </property>
            </widget>
           </item>
