@@ -19,8 +19,8 @@
      <property name="text">
       <string/>
      </property>
-     <property name="textInteractionFlags">
-      <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+     <property name="focusPolicy">
+      <set>Qt::StrongFocus</set>
      </property>
     </widget>
    </item>
@@ -29,8 +29,8 @@
      <property name="text">
       <string/>
      </property>
-     <property name="textInteractionFlags">
-      <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+     <property name="focusPolicy">
+      <set>Qt::StrongFocus</set>
      </property>
     </widget>
    </item>
@@ -39,8 +39,8 @@
      <property name="text">
       <string/>
      </property>
-     <property name="textInteractionFlags">
-      <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+     <property name="focusPolicy">
+      <set>Qt::StrongFocus</set>
      </property>
     </widget>
    </item>
@@ -49,8 +49,8 @@
      <property name="text">
       <string/>
      </property>
-     <property name="textInteractionFlags">
-      <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+     <property name="focusPolicy">
+      <set>Qt::StrongFocus</set>
      </property>
     </widget>
    </item>
@@ -59,8 +59,8 @@
      <property name="text">
       <string/>
      </property>
-     <property name="textInteractionFlags">
-      <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+     <property name="focusPolicy">
+      <set>Qt::StrongFocus</set>
      </property>
     </widget>
    </item>
@@ -69,8 +69,8 @@
      <property name="text">
       <string/>
      </property>
-     <property name="textInteractionFlags">
-      <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+     <property name="focusPolicy">
+      <set>Qt::StrongFocus</set>
      </property>
     </widget>
    </item>
@@ -82,8 +82,8 @@
      <property name="text">
       <string/>
      </property>
-     <property name="textInteractionFlags">
-      <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+     <property name="focusPolicy">
+      <set>Qt::StrongFocus</set>
      </property>
     </widget>
    </item>
@@ -92,8 +92,8 @@
      <property name="text">
       <string/>
      </property>
-     <property name="textInteractionFlags">
-      <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+     <property name="focusPolicy">
+      <set>Qt::StrongFocus</set>
      </property>
     </widget>
    </item>
@@ -102,8 +102,8 @@
      <property name="text">
       <string/>
      </property>
-     <property name="textInteractionFlags">
-      <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+     <property name="focusPolicy">
+      <set>Qt::StrongFocus</set>
      </property>
     </widget>
    </item>
@@ -112,8 +112,8 @@
      <property name="text">
       <string/>
      </property>
-     <property name="textInteractionFlags">
-      <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+     <property name="focusPolicy">
+      <set>Qt::StrongFocus</set>
      </property>
     </widget>
    </item>
@@ -122,8 +122,8 @@
      <property name="text">
       <string/>
      </property>
-     <property name="textInteractionFlags">
-      <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+     <property name="focusPolicy">
+      <set>Qt::StrongFocus</set>
      </property>
     </widget>
    </item>
@@ -132,8 +132,8 @@
      <property name="text">
       <string/>
      </property>
-     <property name="textInteractionFlags">
-      <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+     <property name="focusPolicy">
+      <set>Qt::StrongFocus</set>
      </property>
     </widget>
    </item>
